<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkB"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="85dp"
            android:layout_height="34dp"
            android:text="@string/trivia_head"
            android:textAlignment="center"
            android:textColor="#7A7777"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037" />

        <Button
            android:id="@+id/true_button"
            style="@style/button_Attr"
            android:layout_width="320dp"
            android:layout_height="58dp"
            android:backgroundTint="#161E3E"
            android:text="@string/true_BUTT"
            android:textAlignment="center"
            android:textColor="#009688"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card"
            app:layout_constraintVertical_bias="0.098" />

        <Button
            android:id="@+id/false_button"
            style="@style/button_Attr"
            android:layout_width="320dp"
            android:layout_height="58dp"
            android:backgroundTint="#161E3E"
            android:text="@string/false_butt"
            android:textColor="#009688"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/true_button"
            app:layout_constraintVertical_bias="0.082" />

        <Button
            android:id="@+id/next"
            android:layout_width="100dp"
            android:layout_height="58dp"
            android:backgroundTint="#161E3E"
            android:text="@string/next_butt"
            android:textColor="#009688"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.899"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card"
            app:layout_constraintVertical_bias="0.567" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="350dp"
            android:layout_height="230dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:backgroundTint="#161E3E"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_Count"
            app:layout_constraintVertical_bias="0.082">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="20sp" />

            <!-- android:text="@string/placeholder" -->

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/question_Count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_counter"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.046" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:hint="@string/hint"
            android:textAlignment="center"
            android:textColor="#C7BEBE"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.871"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/HINT"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.887"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.127" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>